sg.tf
resource "aws_security_group" "vpc" {
  name        = "MyVPC"
  description = "security group for lab"
  vpc_id      = aws_vpc.MyVPC.id
  tags = {
    Name    = "security-group-vpc"
    env     = "development"
    details = "web-server-subnet-public"
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["161.10.52.6/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
